# cies_aws_ocr-main

./: .gitignore  README-local-dev.md  README.md  pyproject.toml  pyvenv.cfg  requirements.txt  samconfig.yaml  template.yaml
.github/workflows/: sam-pipeline-dev.yaml  sam-pipeline-prod.yaml  sam-pipeline-prprd.yaml  sam-pipeline.yaml
events/: hello.json  txt-notification-1.json
infrastructure/: samconfig.yaml  template.yaml
samples/: cli.txt
scripts/: create-table.sh  post2.sh  send1.sh
src/: app.py.hold  authorizer.py  cies_ocr_core.py  document_handler.py  http_response.py  ocr.py  ocr_notification_handler.py  ocr_submission_handler.py  presigned_url_handler.py  text_handler.py
tests/: requirements.txt  run_test.sh  test-db-access.py  test1.py  test_cies_ocr_core.py
tests/integration/: test_handler.py.X
tests/unit/: test_cies_ocr_core.py
