[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BIPP"
version = "1.0.0"
requires-python = ">= 3.11"
dependencies = [
    "pytest",
    "boto3",
    "requests",
    "amazon-textract-caller>=0.2.1",
    "amazon-textract-prettyprinter>=0.1.8",
    "amazon-textract-response-parser>=0.1.48",
    "amazon-textract-textractor>=1.6.1",
    "aws-lambda-powertools>=2.36.0",
    "aws-xray-sdk>=2.13.0",
    "boto3>=1.34.79",
    "botocore>=1.34.79",
    "pydantic>=2.7.0"
]
authors = [
    {name = "Chris Beckey", email = "christopher.beckey@va.gov"}
]
description = "A REST wrapper around AWS Textract."
readme = {file = "README.md", content-type = "text/markdown"}
keywords = "bipp aws textract cies"
packages=[
    "src", 
    "tests"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.11"
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests/unit" 
    "tests/integration"
]
